# the-rust-book

./: .gitignore  Cargo.toml  README.md
array/src/: main.rs
cal_24/: Cargo.toml  README.md
cal_24/src/: main.rs
cal_24/src/cal_impl/: v2.rs
cal_24/src/cal_impl/v2/: expression.rs  signature.rs  tree.rs
calculate_length/src/: main.rs
first_word/src/: main.rs
guessing_game/src/: main.rs
lifetime/src/: main.rs
longest/src/: main.rs
messenger/src/: lib.rs
ownership/src/: main.rs
ripgrep/: Cargo.toml
ripgrep/src/: lib.rs  main.rs
smart_pointer/src/: main.rs
try_box/: Cargo.toml
try_box/src/: main.rs
try_iterator/: Cargo.toml
try_iterator/src/: main.rs
try_return/: Cargo.toml
try_return/src/: main.rs
try_trait/: Cargo.toml
try_trait/src/: main.rs
variables/src/: main.rs
